--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "dependencies": {
     "ascii-table": "0.0.9",
     "chalk": "^3.0.0",
+    "common-tags": "^1.8.0",
     "discord.js": "^11.5.1",
     "fs": "0.0.1-security",
-    "ms": "^2.1.2"
+    "ms": "^2.1.2",
+    "string-template": "^1.0.0",
+    "superagent": "^5.1.3"
   }
 }
