--- a/config.json
+++ b/config.json
@@ -1,12 +1,13 @@
 {
     "token": "NjU3NzIxODUxMTcwMTI3OTE1.Xf1VfA.F0mOVnrQcWDGM_HhpJAlbWKYHc0",
     "prefix": "-",
-    "version": "1.0.1",
-    "mcname": "DeadCraft",
+    "version": "1.0.2",
+    "mcname": "PicselCraft",
     "channels": {
         "welcome": "657662325087797293",
         "leave": "657662325087797293",
-        "log": "657662410122985522"
+        "log": "657662410122985522",
+    	"changelogs": "657662342271729666"
     },
     "color": {
         "red": 14165566,
@@ -20,7 +21,7 @@
         "guild": "657658276464295986"
     },
     "roles": {
-        "staffRole": "657662291818315786",
+	"staffRole": "706850061618905088",
         "adminRole": "657658642161467412"
     }
 }
