--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
   "name": "deadbot",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A custom built Discord Bot for DeadPicsel",
   "main": "app.js",
   "scripts": {
-    "test": "node app.js"
+    "run": "node app.js"
   },
-  "keywords": [
-    "DeadPicsel",
-    "DeadCraft",
-    "DPCraft",
-    "Dead",
-    "Discord"
-  ],
+  "keywords": [],
   "author": "Ben Whybrow",
   "license": "ISC",
   "dependencies": {
